--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "14.15.4"
   }
 }
